<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/unlock_image"
        android:src="@drawable/unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_unlock" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unlock_image"
        android:text="@string/unlock_biometric_strong">

        <Button
            android:id="@+id/biometric_strong_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:bottomRightRadius="40dp"
            android:bottomLeftRadius="40dp"
            android:topLeftRadius="40dp"
            android:topRightRadius="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/unlock_biometric_strong"/>

        <Button
            android:id="@+id/biometric_weak_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:bottomRightRadius="40dp"
            android:bottomLeftRadius="40dp"
            android:topLeftRadius="40dp"
            android:topRightRadius="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/biometric_strong_btn"
            android:text="@string/unlock_biometric_weak"/>

        <Button
            android:id="@+id/device_credential_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:bottomRightRadius="40dp"
            android:bottomLeftRadius="40dp"
            android:topLeftRadius="40dp"
            android:topRightRadius="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/biometric_weak_btn"
            android:text="@string/unlock_device_credential"/>


        <Button
            android:id="@+id/biometric_weak_device_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:bottomRightRadius="40dp"
            android:bottomLeftRadius="40dp"
            android:topLeftRadius="40dp"
            android:topRightRadius="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_credential_btn"
            android:text="@string/unlock_biometric_weak_device"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/unsupported_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/message_no_support_biometrics"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>